Bug 302028 - folder list splitter can not be zero when favourite folder view is activated
Summary: folder list splitter can not be zero when favourite folder view is activated
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.8.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-17 00:09 UTC by Thorsten Schnebeck
Modified: 2012-06-25 07:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Schnebeck 2012-06-17 00:09:58 UTC
When using favourite folder view on a small netbook screen I want to disable folder list by dragging the splitter to the bottom - like I can do with the calendar folder view in korganizer.
But in KMail2 the splitter can not be zero. I am forced to watch the folder list. This is a regression to kmail1 in KDE3 :-)

Reproducible: Always

Steps to Reproduce:
1. activate favorite folder icon view
2. drag spltter between favorite folder list and std folder list down to bottom

Actual Results:  
 a small area of the std folder list stays visible

Expected Results:  
only the small splitter handle stays visible like in korganizer calendar folder view.
When corrected it should be checked if the splitter position is saved when restarting kmail/kontact

kdepim/kmail/kmmainwidget.cpp shows at line ~680:

if ( mFavoriteCollectionsView ) {
    mFolderViewSplitter = new QSplitter( Qt::Vertical );
    mFolderViewSplitter->setOpaqueResize( opaqueResize );
    mFolderViewSplitter->setChildrenCollapsible( false );
    mFolderViewSplitter->addWidget( mFavoriteCollectionsView );
    mFavoriteCollectionsView->setParent( mFolderViewSplitter );
    mFolderViewSplitter->addWidget( mSearchAndTree );
    folderTreeWidget = mFolderViewSplitter;
  }

setChildrenCollapsible( false ) disables collapsing of the children widget.

kmail --version
Qt: 4.8.1
KDE: 4.8.4 (4.8.4)
KMail: 4.8.4
Comment 1 Laurent Montel 2012-06-25 07:09:49 UTC
kontact ? kmail ? 
Even if I hide folderview I have minimum size so it's not a pb with folderview.
Will look at it
Comment 2 Laurent Montel 2012-06-25 07:19:03 UTC
Git commit 5456e11bc1d8ab57f14e7ef8964988c9115cbf4c by Montel Laurent.
Committed on 25/06/2012 at 09:18.
Pushed by mlaurent into branch 'master'.

Fix Bug 302028 - folder list splitter can not be zero when favourite

folder view is activated
FIXED-IN: 4.8.5

M  +3    -3    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/5456e11bc1d8ab57f14e7ef8964988c9115cbf4c
Comment 3 Laurent Montel 2012-06-25 07:20:10 UTC
Git commit d1629d05498d79159c17b818627cb7b287dbfa5a by Montel Laurent.
Committed on 25/06/2012 at 09:18.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 302028 - folder list splitter can not be zero when favourite

folder view is activated
FIXED-IN: 4.8.5
(cherry picked from commit 5456e11bc1d8ab57f14e7ef8964988c9115cbf4c)

M  +3    -3    kmail/kmmainwidget.cpp

http://commits.kde.org/kdepim/d1629d05498d79159c17b818627cb7b287dbfa5a