Fix Bug 302028 - folder list splitter can not be zero when favourite

folder view is activated
FIXED-IN: 4.8.5
BUG: 302028
(cherry picked from commit 5456e11bc1d8ab57f14e7ef8964988c9115cbf4c)